# WinCleaner

./: package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
src-tauri/: Cargo.toml
