[package]
name = "win-cleaner"
version = "0.1.2"
description = "A Windows Cleaner"
authors = ["Julian"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "win_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.44"
walkdir = "2.5.0"
jwalk = "0.8.1"
sysinfo = "0.38.4"
tokio = { version = "1", features = ["full"] }
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemInformation"
] }
